# daphne

./: CMakeLists.txt  build.sh  build2.sh  example.daphne  exampleFPGA.daphne  fpga-build-env.sh  sourceme.sh
doc/: FPGAconfiguration.md
scripts/examples/: fpga-gemm.daph  fpga-sgemm.daph  fpga-sgemv.daph  fpga-syrk.daph
src/api/cli/: DaphneUserConfig.h  daphne.cpp
src/compiler/execution/: DaphneIrExecutor.cpp
src/compiler/lowering/: CMakeLists.txt  InsertDaphneContextPass.cpp  RewriteToCallKernelOpPass.cpp
src/ir/daphneir/: DaphneOps.td  Passes.h
src/runtime/local/context/: DaphneContext.h  FPGAContext.cpp  FPGAContext.h
src/runtime/local/datastructures/: DenseMatrix.cpp
src/runtime/local/kernels/: genKernelInst.py  kernels.json
src/runtime/local/kernels/FPGAOPENCL/: CMakeLists.txt  CreateFPGAContext.h  Gemv.h  MatMul.h  gemm_interface.cpp  gemm_interface.h
test/: CMakeLists.txt
